--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+
+  background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+  min-height: 100vh;
+  position: relative;
 }
 .App__heading {
-  color: rgb(37, 43, 213);
-  font-weight: 600;
+  color: #e5e5f6d9;
+  font-weight: 800;
+  line-height: 4rem;
+  font-family: "Manrope", sans-serif;
+  font-size: 50px;
+  margin: 2rem 0;
 }
