--- a/src/components/AddTodos.css
+++ b/src/components/AddTodos.css
@@ -1,10 +1,40 @@
+.AddTodos {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
 .button__add {
-  width: 100px;
+  padding: 0.5rem 1.8rem;
   margin-bottom: 20px;
+  background-color: #060d17;
+  color: white;
+  border-radius: 2.2rem;
+  font-weight: 500;
 }
 .my_form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  /* border: 5px solid black; */
+  flex: 0.5;
+}
+.input__box {
+  width: 80%;
+  /* border: 3px solid black;
+  border-radius: 1rem; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.5rem;
+  margin-bottom: 3rem;
+}
+.input__box > input {
+  width: 100%;
+  line-height: 1.6rem;
+  padding: 0.8rem 1rem;
+  border-radius: 1.5rem;
+  outline: none;
+  background-color: #ffffffc2;
 }
