--- a/src/components/ShowTodos.css
+++ b/src/components/ShowTodos.css
@@ -1,15 +1,16 @@
 .Show__card {
-  background-color: #060d17;
-  color: white;
+  background-color: #060d17 !important;
+  color: white !important;
   padding: 4px 12px;
   margin: 4px 0px;
   margin-top: 15px;
   width: 50rem;
   display: flex;
   justify-content: space-between;
+  margin-bottom: 1.5rem;
 }
 .mybtn {
-  background-color: rgb(3, 21, 51);
+  background-color: #060d17;
   color: white;
   border: none;
   outline: none;
